--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -289,9 +289,11 @@
 
           </div>
 
-          <div class="col-lg-5 order-1 order-lg-2 align-items-stretch video-box" style='background-image: url("{{asset('img/why-us.jpg')}}");' data-aos="zoom-in">
-            <a href="https://www.youtube.com/watch?v=LIqQNG_q2us" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
-          </div>
+          <div class="col-lg-5 order-1 order-lg-2 align-items-stretch video-box" data-aos="zoom-in">
+<div class="h-100 embed-responsive embed-responsive-16by9">
+
+                  <iframe class="h-100 w-100 embed-responsive-item" src="{{asset('img/2022-02-24 17-36-14.mp4')}}" allowfullscreen></iframe>
+          </div></div>
 
         </div>
 
