--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -562,6 +562,7 @@
   </main><!-- End #main -->
 </div>
   <!-- ======= Footer ======= -->
+  <footer>
          <div class="row justify-content-center mb-0 pt-5 pb-0 row-2 px-3">
             <div class="col-12">
                 <div class="row row-2">
