--- a/templates/stream/index.html.twig
+++ b/templates/stream/index.html.twig
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>StromZu</title>
                 <script src="{{asset('js/jquery-3.3.1.min.js')}}"></script>
             <script src="{{asset('js/jquery-ui.min.js')}}"></script>
         <script src="{{asset('js/reserva.js')}}"></script>
@@ -16,6 +16,15 @@
         <link rel="stylesheet" href ="{{asset('styles/jquery.datetimepicker.min.css')}}">
         <link rel="stylesheet" href="{{asset('styles/jquery-ui.min.css')}}">
           <link href="{{asset('styles/logo.css')}}" rel="stylesheet">
+            <link href="{{asset('vendor/aos/aos.css')}}" rel="stylesheet">
+  <link href="{{asset('vendor/bootstrap-icons/bootstrap-icons.css')}}" rel="stylesheet">
+  <link href="{{asset('vendor/glightbox/css/glightbox.min.css')}}" rel="stylesheet">
+  <link href="{{asset('vendor/swiper/swiper-bundle.min.css')}}" rel="stylesheet">
+
+  <!-- Template Main CSS File -->
+  <link href="{{asset('styles/style.css')}}" rel="stylesheet">
+  <link href="{{asset('styles/spinner.css')}}" rel="stylesheet">
+  <link href="{{asset('styles/logo.css')}}" rel="stylesheet">
 
     </head>
     <body>
@@ -25,26 +34,40 @@
                     <h1 class="text-decoration-none text-light">StromZu</h1>
                 </a>
 </nav>
+    <div class="container">
+
         <header>
             <h1>Bienvenido a {{canal.nombre}}</h1>
         </header>
         <!-- Stream video via webcam -->
-        <div class="video-wrap">
-            <video id="video" playsinline autoplay></video>
+                        <div class="row"> 
 
-            <video id="videoconretraso" playsinline autoplay></video>
+        <div class="col-lg-7 col-md-12 col-sm-12">
+            <div class="video-wrap">
+                <video id="video" playsinline autoplay></video>
+
+                <video id="videoconretraso" playsinline autoplay></video>
+
+            </div>
+
         </div>
-        <section>
-        {{canal.descripcion}}
-        </section>
+        <div class="col-lg-5 col-md-12 d-sm-none d-md-inline chat bg-success">
+        Aqui en un futuro irá un chat
+        </div>
+                </div>
+                    {% if is_granted('ROLE_USER') %}
+
+                            <button id="opener" class="mt-3 btn btn-success btn-lg">Open Dialog</button>
+                    {% endif %}
+            <section>
+
+            {{canal.descripcion}}
+            </section>
         <!-- Trigger canvas web API -->
-        <div class="controller">
-            <button id="snap">Capture</button>
 
-        </div>
     {% if is_granted('ROLE_USER') %}
 
-<div id="dialog" title={{"Reserva en " ~ canal.nombre}}>
+<div id="dialog" class="bg-dark" title={{"Reserva en " ~ canal.nombre}}>
        {{ form_start(reservaForm,{'attr':{'class':'form-control'}}) }}
                 <div class="row g-3 align-items-center">
                         {{ form_widget(reservaForm.cliente,{'attr':{'value': app.user.id }}) }}
@@ -73,10 +96,49 @@
             <!-- Allow form submission with keyboard without duplicating the dialog button -->
 </div>
  
-<button id="opener" class="btn btn-success btn-lg">Open Dialog</button>
 
 
 {% endif %}
+<footer>
+         <div class="row justify-content-center mb-0 pt-5 pb-0 row-2 px-3">
+            <div class="col-12">
+                <div class="row row-2">
+                    <div class="col-sm-3 text-md-center">
+                        <h5><span class="icon"> </span><b> StromZu</b></h5>
+                    </div>
+                    <div class="col-sm-3 my-sm-0 mt-5">
+                        <ul class="list-unstyled">
+                            <li class="mt-0">plataforma</li>
+                            <li>Centro de ayuda</li>
+                            <li>Seguridad</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3 my-sm-0 mt-5">
+                        <ul class="list-unstyled">
+                            <li class="mt-0">Clientes</li>
+                            <li>Servicios de clientes</li>
+                        </ul>
+                    </div>
+                    <div class="col-sm-3 my-sm-0 mt-5">
+                        <ul class="list-unstyled">
+                            <li class="mt-0">Compañia</li>
+                            <li><a href="mapaNav">Mapa de navegación</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-center mt-0 pt-0 row-1 mb-0 px-sm-3 px-2">
+            <div class="col-12">
+                <div class="row my-4 row-1 no-gutters">
+                    <div class="col-sm-3 col-auto text-center"><small>&#9400; Stromzu</small></div>
+                    <div class="col-md-3 col-auto "></div>
+                    <div class="col-md-3 col-auto"></div>
+                    <div class="col my-auto text-md-left text-right "> <small> jlopseg049@g.educaand.es <span><img src="https://i.imgur.com/TtB6MDc.png" class="img-fluid " width="25"></span> <span><img src="https://i.imgur.com/N90KDYM.png" class="img-fluid " width="25"></span></small> </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
                 {# Más adelante será un radio button que haga un intercambio de formularios. #}
@@ -84,12 +146,13 @@
                     a partir de AJAX #}
                      
 
-
+</div>
 
         <script src="{{asset('js/jquery.datetimepicker.full.js')}}">
 
         </script>
         <script src="{{asset('js/datePicker.js')}}">
         </script>
+
     </body>
 </html> 
